--- a/css/inventario.css
+++ b/css/inventario.css
@@ -62,10 +62,8 @@ html.dark-mode #btn-toggle-totales.is-active {
   text-align: left;
 }
 
-.page-description {
-  font-size: 1.05rem;
-  color: color-mix(in srgb, var(--text-color) 85%, transparent);
-  max-width: 680px;
+.inventory-heading .page-description {
+  text-align: left;
 }
 
 :root {
