--- a/css/inventario.css
+++ b/css/inventario.css
@@ -266,7 +266,7 @@ html.dark-mode .btn-export:hover {
 
   .inventory-header-actions {
     width: 100%;
-    justify-content: flex-end;
+    justify-content: center;
   }
 
   #btn-toggle-totales {
