--- a/css/inventario.css
+++ b/css/inventario.css
@@ -229,6 +229,7 @@ html.dark-mode .filter-chip.is-active {
   border: none;
   background-color: var(--success-color);
   color: #fff;
+  font-size: 1rem;
   font-weight: 700;
   cursor: pointer;
   transition: background-color 0.2s ease;
