--- a/css/consultar.css
+++ b/css/consultar.css
@@ -137,6 +137,7 @@ html.dark-mode .count-pill {
   border-radius: var(--button-radius);
   background-color: var(--success-color);
   color: #fff;
+  font-size: 1rem;
   border: none;
   font-weight: 700;
   cursor: pointer;
